// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`elementsToReactElements > should not render non-visible elements 1`] = `
{
  "props": {
    "children": [],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`elementsToReactElements > should render text chidrens 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "children": [
            "Text",
          ],
          "style": {
            "color": "rgba(0, 0, 0, 1)",
            "fontFamily": "Inter",
            "fontSize": "50px",
            "fontWeight": 400,
            "height": "50px",
            "left": "0px",
            "letterSpacing": "0px",
            "lineHeight": 1,
            "marginBottom": 0,
            "marginTop": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": "0px",
            "width": "100px",
          },
        },
        "type": "p",
      },
    ],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`elementsToReactElements > should render to react elements 1`] = `
{
  "props": {
    "children": [
      {
        "props": {
          "style": {
            "background": "rgba(255, 255, 255, 1)",
            "display": "flex",
            "height": "50px",
            "left": "0px",
            "position": "absolute",
            "top": "0px",
            "width": "100px",
          },
        },
        "type": "div",
      },
    ],
    "style": {
      "display": "flex",
      "height": "100%",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`exportToPng > should export a basic rectangle to png 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  4,
  176,
  0,
  0,
  2,
  118,
  8,
  6,
  0,
  0,
  0,
  79,
  64,
  123,
  92,
  0,
  0,
  17,
  5,
  73,
  68,
  65,
  84,
  120,
  156,
  237,
  216,
  49,
  1,
  0,
  48,
  12,
  4,
  161,
  212,
  191,
  232,
  175,
  141,
  27,
  64,
  6,
  111,
  187,
  29,
  0,
  0,
  0,
  0,
  68,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  77,
  96,
  1,
  0,
  0,
  0,
  144,
  38,
  176,
  0,
  0,
  0,
  0,
  72,
  19,
  88,
  0,
  0,
  0,
  0,
  164,
  9,
  44,
  0,
  0,
  0,
  0,
  210,
  4,
  22,
  0,
  0,
  0,
  0,
  105,
  2,
  11,
  0,
  0,
  0,
  128,
  52,
  129,
  5,
  0,
  0,
  0,
  64,
  154,
  192,
  2,
  0,
  0,
  0,
  32,
  237,
  3,
  247,
  118,
  93,
  126,
  42,
  139,
  64,
  202,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`renderToImg > should render to a base64 data url 1`] = `"data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIwMCIgaGVpZ2h0PSI2MzAiIHZpZXdCb3g9IjAgMCAxMjAwIDYzMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48bWFzayBpZD0ic2F0b3JpX29tLWlkIj48cmVjdCB4PSIwIiB5PSIwIiB3aWR0aD0iMTIwMCIgaGVpZ2h0PSI2MzAiIGZpbGw9IiNmZmYiLz48L21hc2s+PG1hc2sgaWQ9InNhdG9yaV9vbS1pZC0wIj48cmVjdCB4PSIwIiB5PSIwIiB3aWR0aD0iMTAwIiBoZWlnaHQ9IjUwIiBmaWxsPSIjZmZmIi8+PC9tYXNrPjxwYXRoIGZpbGw9InJnYmEoMCwgMCwgMCwgMSkiIGQ9Ik0xMy44IDkuM0wyLjQgOS4zTDIuNCA1LjRMMjkuNyA1LjRMMjkuNyA5LjNMMTguMyA5LjNMMTguMyA0MS44TDEzLjggNDEuOEwxMy44IDkuM1pNNDMuNCA0Mi4zTDQzLjQgNDIuM1EzOS41IDQyLjMgMzYuNiA0MC42UTMzLjggMzguOCAzMi4yIDM1LjdRMzAuNyAzMi41IDMwLjcgMjguM1EzMC43IDI0LjEgMzIuMiAyMC45UTMzLjggMTcuNyAzNi41IDE1LjlRMzkuMyAxNC4xIDQzLjAgMTQuMUw0My4wIDE0LjFRNDUuMSAxNC4xIDQ3LjIgMTQuOFE0OS4zIDE1LjYgNTEuMCAxNy4xUTUyLjcgMTguNyA1My43IDIxLjNRNTQuNyAyMy45IDU0LjcgMjcuOEw1NC43IDI3LjhMNTQuNyAyOS41TDM0LjkgMjkuNVEzNS4wIDMyLjMgMzYuMCAzNC4yTDM2LjAgMzQuMlEzNy4wIDM2LjMgMzguOSAzNy41UTQwLjkgMzguNiA0My40IDM4LjZMNDMuNCAzOC42UTQ1LjAgMzguNiA0Ni40IDM4LjFRNDcuNyAzNy42IDQ4LjcgMzYuN1E0OS43IDM1LjcgNTAuMiAzNC4zTDUwLjIgMzQuM0w1NC4zIDM1LjRRNTMuNiAzNy41IDUyLjEgMzkuMFE1MC42IDQwLjYgNDguNCA0MS41UTQ2LjIgNDIuMyA0My40IDQyLjNaTTM0LjkgMjUuOUwzNC45IDI1LjlMNTAuNCAyNS45UTUwLjQgMjMuNiA0OS41IDIxLjhRNDguNiAyMC4wIDQ2LjkgMTguOVE0NS4yIDE3LjkgNDMuMCAxNy45TDQzLjAgMTcuOVE0MC41IDE3LjkgMzguNiAxOS4xUTM2LjggMjAuNCAzNS44IDIyLjNMMzUuOCAyMi4zUTM1LjAgMjQuMCAzNC45IDI1LjlaTTU4LjcgMTQuNUw2My41IDE0LjVMNzAuMCAyNS42TDc2LjYgMTQuNUw4MS40IDE0LjVMNzIuNiAyOC4xTDgxLjQgNDEuOEw3Ni42IDQxLjhMNzAuMCAzMS4yTDYzLjUgNDEuOEw1OC43IDQxLjhMNjcuMyAyOC4xTDU4LjcgMTQuNVpNOTMuNCAxNC41TDk5LjIgMTQuNUw5OS4yIDE4LjBMOTMuNCAxOC4wTDkzLjQgMzMuOVE5My40IDM1LjcgOTMuOSAzNi42UTk0LjQgMzcuNSA5NS4zIDM3LjhROTYuMSAzOC4xIDk3LjAgMzguMUw5Ny4wIDM4LjFROTcuNyAzOC4xIDk4LjIgMzguMFE5OC42IDM3LjkgOTguOSAzNy45TDk4LjkgMzcuOUw5OS43IDQxLjZROTkuMyA0MS44IDk4LjUgNDEuOVE5Ny44IDQyLjEgOTYuNiA0Mi4xTDk2LjYgNDIuMVE5NC44IDQyLjEgOTMuMSA0MS4zUTkxLjQgNDAuNiA5MC4zIDM5LjBRODkuMiAzNy41IDg5LjIgMzUuMUw4OS4yIDM1LjFMODkuMiAxOC4wTDg1LjEgMTguMEw4NS4xIDE0LjVMODkuMiAxNC41TDg5LjIgOC4wTDkzLjQgOC4wTDkzLjQgMTQuNVogIi8+PC9zdmc+"`;
